--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
+        "sass": "^1.79.5",
+        "sass-embedded": "^1.79.5",
         "vite": "^5.0"
     }
 }
